--- a/contato.html
+++ b/contato.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/estilo.css">
     
-    <title>Anna Bella Oficial</title>
+    <title>Contato</title>
 </head>
 <body>
     <div id="principal">
@@ -20,15 +20,16 @@
 
         </div>
         <div id="conteudo"> <!--ini conteudo-->
-            <h1>Sobre Anna Bella</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet massa vitae urna bibendum tincidunt. Curabitur vehicula, nunc in pretium feugiat, augue risus convallis erat, ut dapibus erat orci non metus. Nulla facilisi. Maecenas sed velit nec lectus elementum pretium. Aenean tincidunt, nibh nec porttitor pharetra, velit sapien luctus eros, vitae ultrices justo lorem nec quam.
-            </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet massa vitae urna bibendum tincidunt. Curabitur vehicula, nunc in pretium feugiat, augue risus convallis erat, ut dapibus erat orci non metus. Nulla facilisi. Maecenas sed velit nec lectus elementum pretium. Aenean tincidunt, nibh nec porttitor pharetra, velit sapien luctus eros, vitae ultrices justo lorem nec quam.
-            </p>
+            <h1>Contato</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet massa vitae urna bibendum tincidunt. Curabitur vehicula, nunc in pretium feugiat, augue risus convallis erat, ut dapibus erat orci non metus. Nulla facilisi. Maecenas sed velit nec lectus elementum pretium. Aenean tincidunt, nibh nec porttitor pharetra, velit sapien luctus eros, vitae ultrices justo lorem nec quam.
             </p>
 
-
+            <img src="/img/foto1.png" alt="foto1" class="img-campanha">
+           
+            <div>
+                <strong>e-mail: </strong>contato@annabella.com.br <br>
+                <strong>telefone:</strong> (11) 9978-6589
+            </div>
 
         </div> <!-- Fim conteudo -->
         <div id="rodape">
